Se agregaron nuevas consultas con numero de libro, tambien se repararon errores en agregar partida

--- a/src/Vista/AgregarPartida.form
+++ b/src/Vista/AgregarPartida.form
@@ -415,9 +415,6 @@
           <StringArray count="0"/>
         </Property>
       </Properties>
-      <Events>
-        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="cbxListaItemStateChanged"/>
-      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
       </AuxValues>
@@ -506,6 +503,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnAgregarCuenta">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="0" red="0" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Agregar cuenta"/>
       </Properties>
       <Events>
